--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ src/main/java/com/kkadziolka/todo_app/AtApplicationStart.java
 /mvnw.cmd
 /mvnw
 /.mvn/
+/src/test/resources/application.properties
